Fixed animation of button on landing

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no"" />
+    <meta name="viewport" content="width=device-width, initial-scale=1 shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="SimpleDo || Capture and organize tasks the moment they pop into your head"
     />
     <title>SimpleDo</title>
   </head>
